Add h1 to the subject page

--- a/app/views/clockings/edit.html.erb
+++ b/app/views/clockings/edit.html.erb
@@ -1,6 +1,7 @@
-<h1>Editing Clocking</h1>
+<h1 class="text-center">Editing Clocking</h1>
 
 <%= render 'form', clocking: @clocking %>
 
 <%= link_to 'Show', [@subject, @clocking] %> |
 <%= link_to 'Back', subject_clockings_path(@subject) %>
+</div>
