--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -99,9 +99,8 @@
   display: none;
 }
 
-/* Set height of the grid so .sidenav can be 100% (adjust as needed) */
-.row.content {
-  height: 550px;
+.side-nav {
+  height: 100vh;
 }
 
 /* Set gray background color and 100% height */
@@ -130,6 +129,10 @@
 
   .card-detail {
     font-size: 14px;
+  }
+
+  .task {
+    font-size: 12px;
   }
 }
 
