--- a/app/views/subjects/_nav.html.erb
+++ b/app/views/subjects/_nav.html.erb
@@ -1,24 +1,24 @@
 <div class="col-md-3 hidden-xs py-3 py-md-0 px-0 blue-bg">
-  <nav class="navbar bg-light d-none d-md-block">
+  <nav class="side-nav navbar green-bg d-none d-md-block sticky-top">
     <!-- Links -->
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="#">LOGO</a>
+        <a class="nav-link lt-gray-clr" href="#">LOGO</a>
       </li>
       <li class="nav-item">
-        <%= link_to 'All Clockings', root_path, class: 'nav-link' %>
+        <%= link_to 'All Clockings', root_path, class: 'nav-link lt-gray-clr' %>
       </li>
       <li class="nav-item">
-        <%= link_to 'External Clockings', external_path, class: 'nav-link' %>
+        <%= link_to 'External Clockings', external_path, class: 'nav-link lt-gray-clr' %>
       </li>
       <li class="nav-item">
-        <%= link_to 'All Subjects', subjects_path, class: 'nav-link' %>
+        <%= link_to 'All Subjects', subjects_path, class: 'nav-link lt-gray-clr' %>
       </li>
       <li class="nav-item">
-        <%= link_to 'External Clockings', new_subject_path, class: 'nav-link' %>
+        <%= link_to 'New Subject', new_subject_path, class: 'nav-link lt-gray-clr' %>
       </li>
       <li class="nav-item">
-        <%= link_to 'New Clocking', select_path, class: 'nav-link' %>
+        <%= link_to 'New Clocking', select_path, class: 'nav-link lt-gray-clr' %>
       </li>
       <li class="nav-item">
         <%= render 'devise/menu/login_items' %>
