Render the clocking card

--- a/app/views/subjects/all.html.erb
+++ b/app/views/subjects/all.html.erb
@@ -46,34 +46,7 @@
           </div>
         </div>
       </div>
-      <% @subjects.each do |subject| %>
-        <% subject.clockings.each do |clocking| %>
-          <%if subject.title != "External"%>
-            <div class="card mb-3">
-              <div class="row no-gutters">
-                <div class="col-3 card-wrap">
-                  <%= image_tag(subject.icon.variant(extent: "10:7"), class: "card-img") %>
-                </div>
-                <div class="col-7">
-                  <div class="card-body py-1">
-                    <h5 class="card-title m-0"><%= clocking.topic %></h5>
-                    <p class="card-text mb-2">
-                      <small class="text-muted"><%=subject.title%>: </small>
-                      <small class="text-muted">
-                        Created: <%= clocking.created_at.strftime("#{clocking.created_at.day.ordinalize} %B %Y") %>
-                      </small>
-                    </p>
-                    <p class="card-detail mb-2"><%= clocking.details %></p>
-                  </div>
-                </div>
-                <div class="col-2">
-                  <h5 class="row justify-content-center m-3"><%= clocking.duration %> Hours</h5>
-                </div>
-              </div>
-            </div>
-          <%end%>
-        <% end %>
-      <%end%>
+      <%= render 'subjects/clock' %>
     </div>
   </div>
 </div>
