--- a/app/views/subjects/external.html.erb
+++ b/app/views/subjects/external.html.erb
@@ -39,8 +39,7 @@
       <div class="chunk container pt-3">
         <div class="row">
           <div class="clock-type col-10">
-            <h4>All External Clockings</h4>
-            <p>Non subject based clockings</p>
+            <h4>All non subject based clockings</h4>
           </div>
           <div class="clock-total col-2 mt-3 text-center">
             <%= count_external_clock %> Hours
@@ -53,7 +52,7 @@
             <div class="card mb-3">
               <div class="row no-gutters">
                 <div class="col-3 card-wrap">
-                  <%= image_tag("default.jpg", class: "card-img") %>
+                  <%= check_external(subject) %>
                 </div>
                 <div class="col-7">
                   <div class="card-body py-1">
