--- a/app/views/subjects/select.html.erb
+++ b/app/views/subjects/select.html.erb
@@ -9,18 +9,20 @@
 
     <div class="col-md-9">
 
-      <p>Please select the Subject for your Clocking below or
+      <p class="text-center pt-3">Please select the Subject for your Clocking below otherwise
         <strong><%= link_to 'create a new Subject', new_subject_path%></strong>
       </p>
 
       <div class="select">
-        <% @subjects.each do |subject| %>
-          <ul class="list-group list-group-flush">
-            <li class="list-group-item">
-              <%= link_to subject.title, new_subject_clocking_path(subject_id: subject.id), method: :get %>
-            </li>
+        <div class="d-form m-auto pt-4">
+          <ul class="list-group list-group-flush text-center">
+            <% @subjects.each do |subject| %>
+              <li class="list-group-item">
+                <%= link_to subject.title, new_subject_clocking_path(subject_id: subject.id), method: :get %>
+              </li>
+            <%end%>
           </ul>
-        <%end%>
+        </div>
       </div>
     </div>
   </div>
