--- a/app/views/clockings/_form.html.erb
+++ b/app/views/clockings/_form.html.erb
@@ -1,4 +1,4 @@
-<div class="w-25 m-auto">
+<div class="d-form m-auto">
 <%= form_with(model: [@subject, clocking], local: true) do |form| %>
   <% if clocking.errors.any? %>
     <div id="error_explanation">
