--- a/app/views/subjects/_nav.html.erb
+++ b/app/views/subjects/_nav.html.erb
@@ -3,10 +3,10 @@
     <!-- Links -->
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link lt-gray-clr" href="#">LOGO</a>
+        <%= link_to 'Home', root_path, class: 'nav-link lt-gray-clr' %>
       </li>
       <li class="nav-item">
-        <%= link_to 'All Clockings', root_path, class: 'nav-link lt-gray-clr' %>
+        <%= link_to 'All Clockings', all_path, class: 'nav-link lt-gray-clr' %>
       </li>
       <li class="nav-item">
         <%= link_to 'External Clockings', external_path, class: 'nav-link lt-gray-clr' %>
