Make the dashboard a partial

--- a/app/views/subjects/external.html.erb
+++ b/app/views/subjects/external.html.erb
@@ -8,34 +8,7 @@
   <%= render 'subjects/nav' %>
     
     <div class="col-md-9">
-      <div class="dash d-none d-md-block">
-        <div class="row mt-4">
-          <div class="col-md-3 text-center">
-            <div class="chunk">
-              <h4 class="dash-h">Users</h4>
-              <p class="dash-p">1 Million</p> 
-            </div>
-          </div>
-          <div class="col-md-3 text-center">
-            <div class="chunk">
-              <h4 class="dash-h">Pages</h4>
-              <p class="dash-p">100 Million</p> 
-            </div>
-          </div>
-          <div class="col-md-3 text-center">
-            <div class="chunk">
-              <h4 class="dash-h">Sessions</h4>
-              <p class="dash-p">10 Million</p> 
-            </div>
-          </div>
-          <div class="col-md-3 text-center">
-           <div class="chunk">
-             <h4 class="dash-h">Sessions</h4>
-             <p class="dash-p">10 Million</p> 
-           </div>
-         </div>
-        </div>
-      </div>
+      <%= render 'subjects/dashboard'%>
       <div class="chunk container pt-3">
         <div class="row">
           <div class="clock-type col-10">
