--- a/app/views/subjects/all.html.erb
+++ b/app/views/subjects/all.html.erb
@@ -8,34 +8,7 @@
   <%= render 'subjects/nav' %>
     
     <div class="col-md-9">
-      <div class="dash d-none d-md-block">
-        <div class="row mt-4">
-          <div class="col-md-3 text-center">
-            <div class="chunk">
-              <h4 class="dash-h">Total Subjects</h4>
-              <p class="dash-p"><%=@subjects.count%> subjects</p> 
-            </div>
-          </div>
-          <div class="col-md-3 text-center">
-            <div class="chunk">
-              <h4 class="dash-h">Subject Clockings</h4>
-              <p class="dash-p"><%= count_subject_clock %> Hours</p> 
-            </div>
-          </div>
-          <div class="col-md-3 text-center">
-            <div class="chunk">
-              <h4 class="dash-h">External Clockings</h4>
-              <p class="dash-p"><%= count_external_clock %> Hours</p> 
-            </div>
-          </div>
-          <div class="col-md-3 text-center">
-            <div class="chunk">
-              <h4 class="dash-h">Total Hours</h4>
-              <p class="dash-p"><%= total_hours %> Hours</p> 
-            </div>
-          </div>
-        </div>
-      </div>
+      <%= render 'subjects/dashboard'%>
       <div class="chunk container pt-3">
         <div class="row">
           <div class="clock-type col-10">
