Check scss linters errors

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -140,7 +140,7 @@
   }
 }
 
-/* On 767px screens and below, set height to 'auto' for the grid */
+/* On 767px screens and below */
 @media screen and (max-width: 767px) {
   .d-form {
     width: 75%;
