--- a/app/views/subjects/home.html.erb
+++ b/app/views/subjects/home.html.erb
@@ -4,23 +4,23 @@
 
 <div class="container-fluid">
   <div class="row content">    
-    <div class="col-12">
-      <div class="d-form m-auto pt-4">
-        <ul class="list-group list-group-flush text-center">
-          <li class="list-group-item">
-            <%= link_to 'All Clockings', all_path, class: 'home-link' %>
+    <div class="col-12 blue-bg vh-100">
+      <div class="d-form m-auto pt-4 blue-bg">
+        <ul class="list-group list-group-flush text-center blue-bg">
+          <li class="list-group-item blue-bg">
+            <%= link_to 'All Clockings', all_path, class: 'home-link lt-gray-clr' %>
           </li>
-          <li class="list-group-item">
-            <%= link_to 'External Clockings', external_path, class: 'home-link' %>
+          <li class="list-group-item blue-bg">
+            <%= link_to 'External Clockings', external_path, class: 'home-link lt-gray-clr' %>
           </li>
-          <li class="list-group-item">
-            <%= link_to 'All Subjects', subjects_path, class: 'home-link' %>
+          <li class="list-group-item blue-bg">
+            <%= link_to 'All Subjects', subjects_path, class: 'home-link lt-gray-clr' %>
           </li>
-          <li class="list-group-item">
-            <%= link_to 'New Subject', new_subject_path, class: 'home-link' %>
+          <li class="list-group-item blue-bg">
+            <%= link_to 'New Subject', new_subject_path, class: 'home-link lt-gray-clr' %>
           </li>
-          <li class="list-group-item">
-            <%= link_to 'New Clocking', select_path, class: 'home-link' %>
+          <li class="list-group-item blue-bg">
+            <%= link_to 'New Clocking blue-bg', select_path, class: 'home-link lt-gray-clr' %>
           </li>
         </ul>
       </div>
