--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <title>RoRCapstone</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
@@ -21,11 +21,15 @@
     	</div>
     <% end %>
 
+    <div class="d-none d-md-block">
+      <h1 class="p-3 text-center m-0 blue-bg lt-gray-clr"><%= yield(:h1) %></h1>
+    </div>
+
     <nav class="navbar navbar-toggleable-md navbar-light blue-bg d-md-none">
-      <strong><a class="font-20 lt-gray-clr" href="#">StudyMate</a></strong>
       <button class="navbar-toggler lt-gray-clr" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
+      <strong><a class="font-20 lt-gray-clr study_mate" href="#"><%= yield(:study_mate) %></a></strong>
       
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav">
