--- a/app/views/subjects/home.html.erb
+++ b/app/views/subjects/home.html.erb
@@ -1,26 +1,32 @@
-<div class="d-none d-md-block">
-  <h1 class="p-3 text-center m-0 blue-bg lt-gray-clr">Home Page</h1>
-</div>
+<% content_for :h1, "Home Page" %>
+<% content_for :study_mate, "Home Page" %>
 
 <div class="container-fluid">
   <div class="row content">    
     <div class="col-12 blue-bg vh-100">
       <div class="d-form m-auto pt-4 blue-bg">
-        <ul class="list-group list-group-flush text-center blue-bg">
-          <li class="list-group-item blue-bg">
+        <ul class="list-group list-group-flush text-md-center blue-bg lt-gray-clr">
+          <li class="list-group-item blue-bg border-btm py-3">
+            <i class="fas fa-book-open px-2" aria-hidden="true"></i>
             <%= link_to 'All Clockings', all_path, class: 'home-link lt-gray-clr' %>
           </li>
-          <li class="list-group-item blue-bg">
+          <li class="list-group-item blue-bg border-btm py-3">
+            <i class="fas fa-book-open px-2" aria-hidden="true"></i>
             <%= link_to 'External Clockings', external_path, class: 'home-link lt-gray-clr' %>
           </li>
-          <li class="list-group-item blue-bg">
+          <li class="list-group-item blue-bg border-btm py-3">
+            <i class="fas fa-book-open px-2" aria-hidden="true"></i>
             <%= link_to 'All Subjects', subjects_path, class: 'home-link lt-gray-clr' %>
           </li>
-          <li class="list-group-item blue-bg">
+          <li class="list-group-item blue-bg border-btm py-3">
+            <i class="fas fa-book-open px-2" aria-hidden="true"></i>
             <%= link_to 'New Subject', new_subject_path, class: 'home-link lt-gray-clr' %>
           </li>
-          <li class="list-group-item blue-bg">
-            <%= link_to 'New Clocking blue-bg', select_path, class: 'home-link lt-gray-clr' %>
+          <li class="list-group-item blue-bg border-btm py-3">
+            <span>
+              <i class="fas fa-book-open px-2" aria-hidden="true"></i>
+              <%= link_to 'New Clocking', select_path, class: 'home-link lt-gray-clr' %>
+            </span>
           </li>
         </ul>
       </div>
