--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,34 +26,37 @@
     </div>
 
     <nav class="navbar navbar-toggleable-md navbar-light blue-bg d-md-none">
-      <button class="navbar-toggler lt-gray-clr" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="lt-gray-clr"><i class="fas fa-bars"></i></span>
       </button>
       <strong><a class="font-20 lt-gray-clr study_mate" href="#"><%= yield(:study_mate) %></a></strong>
       
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <%= link_to 'Home', root_path, class: 'lt-gray-clr nav-a' %>
+        <ul class="list-group list-group-flush text-md-center blue-bg lt-gray-clr">
+          <li class="list-group-item blue-bg border-btm py-3">
+            <i class="fas fa-clock px-2" aria-hidden="true"></i>
+            <%= link_to 'All Clockings', all_path, class: 'home-link lt-gray-clr' %>
           </li>
-          <li class="nav-item">
-            <%= link_to 'All Clockings', all_path, class: 'lt-gray-clr nav-a' %>
+          <li class="list-group-item blue-bg border-btm py-3">
+            <i class="fas fa-glass-cheers px-2" aria-hidden="true"></i>
+            <%= link_to 'External Clockings', external_path, class: 'home-link lt-gray-clr' %>
           </li>
-          <li class="nav-item">
-            <%= link_to 'External Clockings', external_path, class: 'lt-gray-clr nav-a' %>
+          <li class="list-group-item blue-bg border-btm py-3">
+            <i class="fas fa-book px-2" aria-hidden="true"></i>
+            <%= link_to 'All Subjects', subjects_path, class: 'home-link lt-gray-clr' %>
           </li>
-          <li class="nav-item">
-            <%= link_to 'All Subjects', subjects_path, class: 'lt-gray-clr nav-a' %>
+          <li class="list-group-item blue-bg border-btm py-3">
+            <i class="fas fa-book-open px-2" aria-hidden="true"></i>
+            <%= link_to 'New Subject', new_subject_path, class: 'home-link lt-gray-clr' %>
           </li>
-          <li class="nav-item">
-            <%= link_to 'New Subject', new_subject_path, class: 'lt-gray-clr nav-a' %>
+          <li class="list-group-item blue-bg border-btm py-3">
+            <i class="fas fa-user-clock px-2" aria-hidden="true"></i>
+            <%= link_to 'New Clocking', select_path, class: 'home-link lt-gray-clr' %>
           </li>
-          <li class="nav-item">
-            <%= link_to 'New Clocking', select_path, class: 'lt-gray-clr nav-a' %>
-          </li>
-          <li class="nav-item">
-            <%= render 'devise/menu/login_items' %>
-          </li>
+          <li class="list-group-item blue-bg border-btm py-3">
+            <i class="fas fa-user-clock px-2" aria-hidden="true"></i>
+            <%= link_to('Logout', destroy_student_session_path, method: :delete, class: "home-link lt-gray-clr") %>
+         </li>
         </ul>
       </div>
     </nav>
