--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,7 +21,7 @@
 }
 
 .gray-bg {
-  background: #d3d3d3;
+  background: #f4f7fa;
 }
 
 .lt-gray-clr {
@@ -107,6 +107,14 @@
 
 .side-nav {
   height: 100vh;
+}
+
+.gutter {
+  box-shadow: silver 0px 1px 3px 0px;
+}
+
+.chunk {
+  box-shadow: silver 0px 5px 10px 0px;
 }
 
 /* Set gray background color and 100% height */
