--- a/app/views/subjects/_clock.html.erb
+++ b/app/views/subjects/_clock.html.erb
@@ -1,8 +1,8 @@
 <% @subjects.each do |subject| %>
   <% subject.clockings.each do |clocking| %>
     <%if subject.title != "External" %>
-      <div class="card mb-3">
-        <div class="row no-gutters">
+      <div class="card gutter my-4 border-0">
+        <div class="row p-2">
           <div class="col-3 card-wrap">
             <%= check_external(subject) %>
           </div>
