--- a/app/views/subjects/_nav.html.erb
+++ b/app/views/subjects/_nav.html.erb
@@ -1,28 +1,34 @@
-<div class="col-md-3 hidden-xs py-3 py-md-0 px-0 blue-bg">
+<div class="col-md-3 hidden-xs py-3 py-md-0 px-0 green-bg">
   <nav class="side-nav navbar green-bg d-none d-md-block sticky-top">
-    <!-- Links -->
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <%= link_to 'Home', root_path, class: 'nav-link lt-gray-clr' %>
+    <ul class="list-group list-group-flush green-bg lt-gray-clr">
+      <li class="list-group-item green-bg border-btm py-3">
+        <i class="fas fa-home px-2" aria-hidden="true"></i>
+        <%= link_to 'Home', all_path, class: 'home-link lt-gray-clr' %>
       </li>
-      <li class="nav-item">
-        <%= link_to 'All Clockings', all_path, class: 'nav-link lt-gray-clr' %>
+      <li class="list-group-item green-bg border-btm py-3">
+        <i class="fas fa-clock px-2" aria-hidden="true"></i>
+        <%= link_to 'All Clockings', all_path, class: 'home-link lt-gray-clr' %>
       </li>
-      <li class="nav-item">
-        <%= link_to 'External Clockings', external_path, class: 'nav-link lt-gray-clr' %>
+      <li class="list-group-item green-bg border-btm py-3">
+        <i class="fas fa-glass-cheers px-2" aria-hidden="true"></i>
+        <%= link_to 'External Clockings', external_path, class: 'home-link lt-gray-clr' %>
       </li>
-      <li class="nav-item">
-        <%= link_to 'All Subjects', subjects_path, class: 'nav-link lt-gray-clr' %>
+      <li class="list-group-item green-bg border-btm py-3">
+        <i class="fas fa-book px-2" aria-hidden="true"></i>
+        <%= link_to 'All Subjects', subjects_path, class: 'home-link lt-gray-clr' %>
       </li>
-      <li class="nav-item">
-        <%= link_to 'New Subject', new_subject_path, class: 'nav-link lt-gray-clr' %>
+      <li class="list-group-item green-bg border-btm py-3">
+        <i class="fas fa-book-open px-2" aria-hidden="true"></i>
+        <%= link_to 'New Subject', new_subject_path, class: 'home-link lt-gray-clr' %>
       </li>
-      <li class="nav-item">
-        <%= link_to 'New Clocking', select_path, class: 'nav-link lt-gray-clr' %>
+      <li class="list-group-item green-bg border-btm py-3">
+        <i class="fas fa-user-clock px-2" aria-hidden="true"></i>
+        <%= link_to 'New Clocking', select_path, class: 'home-link lt-gray-clr' %>
       </li>
-      <li class="nav-item">
-        <%= render 'devise/menu/login_items' %>
-      </li>
-    </ul><br>
+      <li class="list-group-item green-bg border-btm py-3">
+        <i class="fas fa-user-clock px-2" aria-hidden="true"></i>
+        <%= link_to('Logout', destroy_student_session_path, method: :delete, class: "home-link lt-gray-clr") %>
+     </li>
+    </ul>
   </nav>
 </div>
