--- a/app/views/subjects/home.html.erb
+++ b/app/views/subjects/home.html.erb
@@ -1,34 +1,11 @@
-<% content_for :h1, "Home Page" %>
-<% content_for :study_mate, "Home Page" %>
+<% content_for :h1, "HOME PAGE" %>
+<% content_for :study_mate, "HOME PAGE" %>
 
 <div class="container-fluid">
   <div class="row content">    
     <div class="col-12 blue-bg vh-100">
       <div class="d-form m-auto pt-4 blue-bg">
-        <ul class="list-group list-group-flush text-md-center blue-bg lt-gray-clr">
-          <li class="list-group-item blue-bg border-btm py-3">
-            <i class="fas fa-clock px-2" aria-hidden="true"></i>
-            <%= link_to 'All Clockings', all_path, class: 'home-link lt-gray-clr' %>
-          </li>
-          <li class="list-group-item blue-bg border-btm py-3">
-            <i class="fas fa-glass-cheers px-2" aria-hidden="true"></i>
-            <%= link_to 'External Clockings', external_path, class: 'home-link lt-gray-clr' %>
-          </li>
-          <li class="list-group-item blue-bg border-btm py-3">
-            <i class="fas fa-book px-2" aria-hidden="true"></i>
-            <%= link_to 'All Subjects', subjects_path, class: 'home-link lt-gray-clr' %>
-          </li>
-          <li class="list-group-item blue-bg border-btm py-3">
-            <i class="fas fa-book-open px-2" aria-hidden="true"></i>
-            <%= link_to 'New Subject', new_subject_path, class: 'home-link lt-gray-clr' %>
-          </li>
-          <li class="list-group-item blue-bg border-btm py-3">
-            <span>
-              <i class="fas fa-user-clock px-2" aria-hidden="true"></i>
-              <%= link_to 'New Clocking', select_path, class: 'home-link lt-gray-clr' %>
-            </span>
-          </li>
-        </ul>
+        <%= render 'layouts/mobile_nav'%>
       </div>
     </div>
   </div>
