Add yield for top ribbon

--- a/app/views/subjects/all.html.erb
+++ b/app/views/subjects/all.html.erb
@@ -1,5 +1,6 @@
 <% content_for :h1, "SUBJECT CLOCKINGS" %>
 <% content_for :study_mate, "SUBJECT CLOCKINGS" %>
+<% content_for :h4, "Subject based clockings" %>
 
 <%= render 'subjects/top' %>
 <div class="container-fluid">
