--- a/app/views/subjects/_dashboard.html.erb
+++ b/app/views/subjects/_dashboard.html.erb
@@ -1,25 +1,25 @@
 <div class="dash d-none d-md-block">
   <div class="row mt-4">
     <div class="col-md-3 text-center">
-      <div class="chunk">
+      <div class="chunk chunk-d py-3">
         <h4 class="dash-h">Total Subjects</h4>
         <p class="dash-p"><%=@subjects.count%> subjects</p> 
       </div>
     </div>
     <div class="col-md-3 text-center">
-      <div class="chunk">
+      <div class="chunk chunk-d py-3">
         <h4 class="dash-h">Subject Clockings</h4>
         <p class="dash-p"><%= count_subject_clock %> Hours</p> 
       </div>
     </div>
     <div class="col-md-3 text-center">
-      <div class="chunk">
+      <div class="chunk chunk-d py-3">
         <h4 class="dash-h">External Clockings</h4>
         <p class="dash-p"><%= count_external_clock %> Hours</p> 
       </div>
     </div>
     <div class="col-md-3 text-center">
-      <div class="chunk">
+      <div class="chunk chunk-d py-3">
         <h4 class="dash-h">Total Hours</h4>
         <p class="dash-p"><%= total_hours %> Hours</p> 
       </div>
