--- a/app/views/subjects/_top.html.erb
+++ b/app/views/subjects/_top.html.erb
@@ -2,10 +2,10 @@
   <div class="row">
     <div class="col-0 col-md-5"></div>
     <div class="clock-type col-10 col-md-5">
-      <h4>Subject based clockings</h4>
+      <h4><%= yield(:h4) %></h4>
     </div>
     <div class="clock-total col-2 text-center">
-      <%= count_subject_clock %> Hours
+      <%= count_external_clock %> Hours
     </div>
   </div>
 </div>
