--- a/app/views/subjects/_top.html.erb
+++ b/app/views/subjects/_top.html.erb
@@ -1,10 +1,10 @@
 <div class="chunk p-3">
   <div class="row">
     <div class="col-0 col-md-5"></div>
-    <div class="clock-type col-10 col-md-5">
-      <h4><%= yield(:h4) %></h4>
+    <div class="clock-type col-9 col-md-5">
+      <h4 class="font-16 font-weight-normal text-secondary"><%= yield(:h4) %></h4>
     </div>
-    <div class="clock-total col-2 text-center">
+    <div class="clock-total col-3 col-md-2 text-center">
       <%= count_external_clock %> Hours
     </div>
   </div>
