--- a/app/views/subjects/home.html.erb
+++ b/app/views/subjects/home.html.erb
@@ -1,5 +1,5 @@
-<% content_for :h1, "HOME PAGE" %>
-<% content_for :study_mate, "HOME PAGE" %>
+<% content_for :h1, "STUDY MATE" %>
+<% content_for :study_mate, "STUDY MATE" %>
 
 <div class="container-fluid">
   <div class="row content">    
