--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -1,6 +1,5 @@
-<div class="d-none d-md-block">
-  <h1 class="p-3 text-center m-0 blue-bg lt-gray-clr">All Subjects</h1>
-</div>
+<% content_for :h1, "ALL SUBJECTS" %>
+<% content_for :study_mate, "ALL SUBJECTS" %>
 
 <div class="container-fluid">
   <div class="row content">
