--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -60,6 +60,14 @@
   border-bottom: hsla(0, 0%, 95%, 0.233) solid 1px;
 }
 
+.content-wrap {
+  padding-bottom: 95px;
+}
+
+.ft-border {
+  border: 1px solid;
+}
+
 /* fonts here */
 .font-11 {
   font-size: 11px;
@@ -125,6 +133,13 @@
 
 .d-form {
   width: 25%;
+}
+
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  color: white;
 }
 
 @media screen and (max-width: 992px) {
