--- a/app/views/subjects/_nav.html.erb
+++ b/app/views/subjects/_nav.html.erb
@@ -1,6 +1,6 @@
-<div class="col-md-3 hidden-xs py-3 py-md-0 px-0 green-bg">
+<div class="col-md-3 hidden-xs py-md-0 px-0">
   <nav class="side-nav navbar green-bg d-none d-md-block sticky-top">
-    <ul class="list-group list-group-flush green-bg lt-gray-clr">
+    <ul class="list-group list-group-flush lt-gray-clr">
       <li class="list-group-item green-bg border-btm py-3">
         <i class="fas fa-home px-2" aria-hidden="true"></i>
         <%= link_to 'Home', all_path, class: 'home-link lt-gray-clr' %>
