--- a/app/views/subjects/all.html.erb
+++ b/app/views/subjects/all.html.erb
@@ -1,16 +1,19 @@
 <% content_for :h1, "SUBJECT CLOCKINGS" %>
 <% content_for :study_mate, "SUBJECT CLOCKINGS" %>
-<% content_for :h4, "Subject based clockings" %>
-
+<% content_for :h4, "Subject Based Clockings" %>
 <%= render 'subjects/top' %>
 <div class="container-fluid">
   <div class="row content">
-
   <%= render 'subjects/nav' %>
-    
-    <div class="col-md-9">
-      <%= render 'subjects/dashboard'%>
+    <div class="col-md-9 content-wrap">
       <%= render 'subjects/clock' %>
     </div>
+  </div>
+</div>
+<div class="footer green-bg w-100 lt-gray-clr d-md-none">
+  <div class="ft-border m-3 p-3 text-center border-light">
+    <h3 class="ft-create">
+      <%= link_to 'Create New Clocking', select_path, class: 'home-link lt-gray-clr font-16' %>
+    </h3>
   </div>
 </div>
