Add more styling and refactoring the code for the app

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -68,6 +68,11 @@
   border: 1px solid;
 }
 
+.form-control {
+  border-left: 0;
+  border-right: 0;
+}
+
 /* fonts here */
 .font-11 {
   font-size: 11px;
