--- a/app/views/subjects/all.html.erb
+++ b/app/views/subjects/all.html.erb
@@ -10,10 +10,4 @@
     </div>
   </div>
 </div>
-<div class="footer green-bg w-100 lt-gray-clr d-md-none">
-  <div class="ft-border m-3 p-3 text-center border-light">
-    <h3 class="ft-create">
-      <%= link_to 'Create New Clocking', select_path, class: 'home-link lt-gray-clr font-16' %>
-    </h3>
-  </div>
-</div>
+<%= render "subjects/footer"%>
