--- a/app/views/subjects/edit.html.erb
+++ b/app/views/subjects/edit.html.erb
@@ -1,4 +1,4 @@
-<h1 class="text-center">Editing Subject</h1>
+<h1 class="text-center">Editing <%=@subject.title%></h1>
 
 <%= render 'form', subject: @subject %>
 
