--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -3,10 +3,8 @@
 
 <div class="container-fluid">
   <div class="row content">
-
   <%= render 'subjects/nav' %>
-    
-    <div class="col-md-9">
+    <div class="col-md-9 content-wrap">
       <div class="chunk container pt-3">
         <div class="row">
           <div class="clock-type col-10">
@@ -44,4 +42,5 @@
     </div>
   </div>
 </div>
+<%= render "subjects/footer"%>
 
