--- a/app/views/subjects/external.html.erb
+++ b/app/views/subjects/external.html.erb
@@ -1,6 +1,3 @@
-<%# <div class="d-none d-md-block"> %>
-  <%# <h1 class="p-3 text-center m-0 blue-bg lt-gray-clr">External Clockings</h1> %>
-<%# </div> %>
 <% content_for :h1, "EXTERNAL CLOCKINGS" %>
 <% content_for :study_mate, "EXTERNAL CLOCKINGS" %>
 <% content_for :h4, "External based clockings" %>
@@ -12,7 +9,7 @@
 
   <%= render 'subjects/nav' %>
     
-    <div class="col-md-9">
+    <div class="col-md-9 content-wrap">
       <% @subjects.each do |subject| %>
         <% subject.clockings.each do |clocking| %>
           <%if subject.title == "External" %>
@@ -43,3 +40,4 @@
     </div>
   </div>
 </div>
+<%= render "subjects/footer"%>
