--- a/app/views/subjects/show.html.erb
+++ b/app/views/subjects/show.html.erb
@@ -1,8 +1,5 @@
-<div class="d-none d-md-block">
-  <h1 class="p-3 text-center m-0 blue-bg lt-gray-clr">
-    <%=@subject.title%> Clockings
-  </h1>
-</div>
+<% content_for :h1, @subject.title %>
+<% content_for :study_mate, "SUBJECT CLOCKINGS" %>
 
 <div class="container-fluid">
   <div class="row content">
@@ -20,7 +17,7 @@
             <div class="col-3 card-wrap">
               <%= check_external(@subject)%>
             </div>
-            <div class="col-7">
+            <div class="col-6">
               <div class="card-body py-1">
                 <h5 class="card-title m-0"><%= clocking.topic %></h5>
                 <p class="card-text mb-2">
@@ -31,11 +28,11 @@
                 <p class="card-detail mb-2"><%= clocking.details %></p>
               </div>
             </div>
-            <div class="col-2">
+            <div class="col-3">
               <h5 class="row justify-content-center m-3"><%= clocking.duration %> Hours</h5>
-              <div>
+              <div class="text-center">
                 <span>
-                  <%= link_to 'Edit', edit_subject_clocking_path(@subject, clocking) %>
+                  <%= link_to 'Edit', edit_subject_clocking_path(@subject, clocking) %> | 
                 </span>
                 <span>
                   <%= link_to 'Destroy', [@subject, clocking], method: :delete, data: { confirm: 'Are you sure?' } %>
@@ -45,10 +42,11 @@
           </div>
         </div>
       <%end%>
+      <div>
+        <%= link_to 'Edit', edit_subject_path(@subject) %> |
+        <%= link_to 'New Clocking', new_subject_clocking_path(@subject) %> |
+        <%= link_to 'Back to All Subjects', subjects_path %>
+      </div>
     </div>
-
-    <%= link_to 'Edit', edit_subject_path(@subject) %> |
-    <%= link_to 'New Clocking', new_subject_clocking_path(@subject) %> |
-    <%= link_to 'Back to All Subjects', subjects_path %>
   </div>
 </div>
