--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -73,6 +73,15 @@
   border-right: 0;
 }
 
+.card-img {
+  height: 350px;
+}
+
+.cover {
+  width: 260px;
+  object-fit: cover;
+}
+
 /* fonts here */
 .font-11 {
   font-size: 11px;
