--- a/app/views/subjects/_form.html.erb
+++ b/app/views/subjects/_form.html.erb
@@ -25,6 +25,7 @@
   <div class="form-group field">
     <%= form.label :icon %>
     <%= form.file_field :icon, class: "form-control" %>
+    <small id="iconupload" class="form-text text-muted">Please use a 500X350 image for better appeal</small>
   </div>
 
   <div class="form-group actions">
