Upadate routes to show only the urls beings used

--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -5,10 +5,10 @@
   <div class="row content">
   <%= render 'subjects/nav' %>
     <div class="col-md-9 content-wrap">
-      <div class="chunk container pt-3">
+      <div class="chunk container-fluid pt-3">
         <div class="row">
           <div class="clock-type col-10">
-            <h4>All Subjects</h4>
+            <h4 class="text-center font-weight-lighter text-secondary">Your Subjects</h4>
           </div>
         </div>
       </div>
