Solve the N+1 query by including clockings and attachments

--- a/app/views/subjects/_nav.html.erb
+++ b/app/views/subjects/_nav.html.erb
@@ -3,7 +3,7 @@
     <ul class="list-group list-group-flush lt-gray-clr">
       <li class="list-group-item green-bg border-btm py-3">
         <i class="fas fa-home px-2" aria-hidden="true"></i>
-        <%= link_to 'Home', all_path, class: 'home-link lt-gray-clr' %>
+        <%= link_to 'Home', root_path, class: 'home-link lt-gray-clr' %>
       </li>
       <li class="list-group-item green-bg border-btm py-3">
         <i class="fas fa-clock px-2" aria-hidden="true"></i>
