--- a/app/views/subjects/all.html.erb
+++ b/app/views/subjects/all.html.erb
@@ -1,6 +1,7 @@
 <% content_for :h1, "SUBJECT CLOCKINGS" %>
 <% content_for :study_mate, "SUBJECT CLOCKINGS" %>
 <% content_for :h4, "Subject Based Clockings" %>
+<% content_for :count, "#{count_subject_clock} Hours" %>
 <%= render 'subjects/top' %>
 <div class="container-fluid">
   <div class="row content">
