--- a/app/views/subjects/external.html.erb
+++ b/app/views/subjects/external.html.erb
@@ -1,6 +1,7 @@
 <% content_for :h1, "EXTERNAL CLOCKINGS" %>
 <% content_for :study_mate, "EXTERNAL CLOCKINGS" %>
 <% content_for :h4, "External based clockings" %>
+<% content_for :count, "#{count_external_clock} Hours" %>
 
 <%= render 'subjects/top' %>
 
