--- a/app/views/layouts/_mobile_nav.html.erb
+++ b/app/views/layouts/_mobile_nav.html.erb
@@ -1,5 +1,9 @@
 <ul class="list-group list-group-flush text-md-center blue-bg lt-gray-clr">
   <li class="list-group-item blue-bg border-btm py-3">
+    <i class="fas fa-home px-2" aria-hidden="true"></i>
+    <%= link_to 'Home', root_path, class: 'home-link lt-gray-clr' %>
+  </li>
+  <li class="list-group-item blue-bg border-btm py-3">
     <i class="fas fa-clock px-2" aria-hidden="true"></i>
     <%= link_to 'All Clockings', all_path, class: 'home-link lt-gray-clr' %>
   </li>
