--- a/app/views/subjects/all.html.erb
+++ b/app/views/subjects/all.html.erb
@@ -7,7 +7,31 @@
   <div class="row content">
   <%= render 'subjects/nav' %>
     <div class="col-md-9 content-wrap">
-      <%= render 'subjects/clock' %>
+      <% @all.each do |subject| %>
+        <% subject.clockings.each do |clocking| %>
+          <div class="card gutter my-4 border-0">
+           <div class="row p-2">
+             <div class="col-3 card-wrap">
+               <%= check_external(subject) %>
+             </div>
+             <div class="col-7">
+               <div class="card-body py-1">
+                 <h5 class="card-title m-0"><%= clocking.topic %></h5>
+                 <p class="card-text mb-2">
+                   <small class="text-muted">
+                     Created: <%= clocking.created_at.strftime("#{clocking.created_at.day.ordinalize} %B %Y") %>
+                   </small>
+                 </p>
+                 <p class="card-detail mb-2"><%= clocking.details %></p>
+               </div>
+             </div>
+             <div class="col-2">
+               <h5 class="row justify-content-center m-3"><%= clocking.duration %> Hours</h5>
+             </div>
+           </div>
+         </div>
+        <% end %>
+      <%end%>
     </div>
   </div>
 </div>
