--- a/app/views/subjects/home.html.erb
+++ b/app/views/subjects/home.html.erb
@@ -4,7 +4,7 @@
 <div class="container-fluid">
   <div class="row content">    
     <div class="col-12 blue-bg vh-100">
-      <div class="d-form m-auto pt-4 blue-bg">
+      <div class="d-form m-auto pt-4 blue-bg text-md-center">
         <%= render 'layouts/mobile_nav'%>
       </div>
     </div>
