--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -123,11 +123,11 @@
 }
 
 .gutter {
-  box-shadow: silver 0px 1px 3px 0px;
+  box-shadow: silver 0 1px 3px 0;
 }
 
 .chunk {
-  box-shadow: silver 0px 5px 10px 0px;
+  box-shadow: silver 0 5px 10px 0;
 }
 
 /* Set gray background color and 100% height */
