--- a/app/views/subjects/external.html.erb
+++ b/app/views/subjects/external.html.erb
@@ -14,7 +14,7 @@
               <div class="col-3 card-wrap">
                 <%= check_external(subject) %>
               </div>
-              <div class="col-7">
+              <div class="col-6">
                 <div class="card-body py-1">
                   <h5 class="card-title m-0"><%= clocking.topic %></h5>
                   <p class="card-text mb-2">
@@ -25,7 +25,7 @@
                   <p class="card-detail mb-2"><%= clocking.details %></p>
                 </div>
               </div>
-              <div class="col-2">
+              <div class="col-2s">
                 <h5 class="row justify-content-center m-3"><%= clocking.duration %> Hours</h5>
               </div>
             </div>
