Add gem faker again deploy needs it

--- a/app/views/subjects/all.html.erb
+++ b/app/views/subjects/all.html.erb
@@ -26,7 +26,7 @@
                </div>
              </div>
              <div class="col-3">
-               <h5 class="row justify-content-center m-3"><%= clocking.duration %> Hours</h5>
+               <h5 class="row justify-content-center m-3 font-16"><%= clocking.duration %> Hours</h5>
              </div>
            </div>
          </div>
