--- a/app/views/subjects/external.html.erb
+++ b/app/views/subjects/external.html.erb
@@ -25,8 +25,8 @@
                   <p class="card-detail mb-2"><%= clocking.details %></p>
                 </div>
               </div>
-              <div class="col-2s">
-                <h5 class="row justify-content-center m-3"><%= clocking.duration %> Hours</h5>
+              <div class="col-3">
+                <h5 class="row justify-content-center m-3 font-16"><%= clocking.duration %> Hours</h5>
               </div>
             </div>
           </div>
