--- a/app/views/subjects/show.html.erb
+++ b/app/views/subjects/show.html.erb
@@ -29,7 +29,7 @@
               </div>
             </div>
             <div class="col-3">
-              <h5 class="row justify-content-center m-3"><%= clocking.duration %> Hours</h5>
+              <h5 class="row justify-content-center m-3 font-16"><%= clocking.duration %> Hours</h5>
               <div class="text-center">
                 <span>
                   <%= link_to 'Edit', edit_subject_clocking_path(@subject, clocking) %> | 
