--- a/app/views/layouts/_mobile_nav.html.erb
+++ b/app/views/layouts/_mobile_nav.html.erb
@@ -5,7 +5,7 @@
   </li>
   <li class="list-group-item blue-bg border-btm py-3">
     <i class="fas fa-clock px-2" aria-hidden="true"></i>
-    <%= link_to 'All Clockings', all_path, class: 'home-link lt-gray-clr all' %>
+    <%= link_to 'All Clockings', clockings_path, class: 'home-link lt-gray-clr all' %>
   </li>
   <li class="list-group-item blue-bg border-btm py-3">
     <i class="fas fa-glass-cheers px-2" aria-hidden="true"></i>
