Add images to the subjects index

--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -16,7 +16,7 @@
           <div class="card mb-3">
             <div class="row no-gutters">
               <div class="col-3 card-wrap">
-                <%= check_external(subject) %>
+                <%= sub_icon(subject) %>
               </div>
               <div class="col-7">
                   <div class="card-body py-1">
