--- a/app/views/subjects/show.html.erb
+++ b/app/views/subjects/show.html.erb
@@ -15,7 +15,7 @@
         <div class="card mb-3">
           <div class="row no-gutters">
             <div class="col-3 card-wrap">
-              <%= check_external(@subject)%>
+              <%= clock_icon(clocking)%>
             </div>
             <div class="col-6">
               <div class="card-body py-1">
