--- a/app/views/clockings/external.html.erb
+++ b/app/views/clockings/external.html.erb
@@ -11,7 +11,7 @@
         <div class="card gutter my-4 border-0">
          <div class="row p-2">
            <div class="col-3 card-wrap">
-             <%= check_external(clocking) %>
+             <%= clock_icon(clocking) %>
            </div>
            <div class="col-6">
              <div class="card-body py-1">
