Add root_path in the form and home link in the nav

--- a/app/views/clockings/new.html.erb
+++ b/app/views/clockings/new.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', clocking: @clocking %>
 
-<%= link_to 'Back', subject_clockings_path(@subject) %>
+<%= link_to 'home', root_path %>
 </div>
