--- a/app/views/layouts/_mobile_nav.html.erb
+++ b/app/views/layouts/_mobile_nav.html.erb
@@ -21,7 +21,7 @@
   </li>
   <li class="list-group-item blue-bg border-btm py-3">
     <i class="fas fa-user-clock px-2" aria-hidden="true"></i>
-    <%= link_to 'New Clocking', select_path, class: 'home-link lt-gray-clr new-clock' %>
+    <%= link_to 'New Clocking', new_clocking_path, class: 'home-link lt-gray-clr new-clock' %>
   </li>
   <li class="list-group-item blue-bg border-btm py-3">
     <i class="fas fa-user-clock px-2" aria-hidden="true"></i>
